<resources>
    <string name="app_name">AlmostThere</string>
    <string name="splash_app_title">거의\n다왔어</string>
    <string name="splash_touch">약속을 잡으려면 터치</string>
    <string name="past_promise">끝났어</string>
    <string name="past_promise_hint"><![CDATA[< 끝난 약속]]></string>
    <string name="future_promise">곧이야</string>
    <string name="future_promise_hint"><![CDATA[예정 약속 >]]></string>
    <string name="join_promise">가는중</string>
    <string name="join_promise_hint"><![CDATA[< 약속 참여]]></string>
    <string name="set_promise">만날래</string>
    <string name="set_promise_hint"><![CDATA[약속 생성 >]]></string>
    <string name="promise_history">언제야</string>
    <string name="promise_history_hint"><![CDATA[< 약속 보기]]></string>
    <string name="setting_promise">약속 설정</string>
    <string name="hint_select_game_start_time">게임 시작 시간을 선택하세요.</string>
    <string name="hint_select_promise_date">약속 날짜를 선택하세요.</string>
    <string name="hint_select_promise_time">약속 시간을 선택하세요.</string>
    <string name="hint_select_promise_location">약속 장소를 선택하세요.</string>
    <string name="promise_location">약속 장소</string>
    <string name="promise_date">약속 날짜</string>
    <string name="promise_time">약속 시간</string>
    <string name="game_start_time">게임 시작 시간</string>
    <string name="date">%d년 %d월 %d일</string>
    <string name="time">%d시 %d분</string>
    <string name="time_title">시간</string>
    <string name="before_time">%d시간 %d분 전</string>
    <string name="game_start">게임 시작</string>
    <string name="create">생성</string>
    <string name="hour">시간</string>
    <string name="before_minute">분 전</string>
    <string name="cancel">취소</string>
    <string name="ok">확인</string>
    <string name="search_location">목적지 찾기</string>
    <string name="promise_creation">약속 생성</string>
    <string name="promise_creation_with_icon">약속 생성 🤝</string>
    <string name="promise_info">약속 정보</string>
    <string name="stubborn_shiba">산책가기 싫은 시바견</string>
    <string name="modest_shiba">그윽하게 보는 시바견</string>
    <string name="lying_shiba">누워있는 시바견</string>
    <string name="sudden_shiba">급한 시바견</string>
    <string name="move_to_my_location">내 위치로 이동</string>
    <string name="character_img">캐릭터 이미지</string>
    <string name="promises_end">끝났어</string>
    <string name="game_result_finish">종료</string>
    <string name="gaming_hp">HP</string>
    <string name="gaming_ranking">순위</string>
    <string name="invalid_invite_code">유효하지 않은 초대 코드 입니다.</string>
    <string name="valid_invite_code">유효한 초대 코드 입니다.</string>
    <string name="label_invite_code">초대 코드 입력</string>
    <string name="hint_invite_code">영문, 숫자 조합 7자리</string>
    <string name="already_join">이미 참여중인 약속입니다.</string>
    <string name="already_started">만료된 약속입니다.</string>
    <string name="join">약속 참여</string>
    <string name="join_with_icon">약속 참여 🤚</string>
    <string name="code_copy">코드 복사</string>
    <string name="code_share">코드 공유</string>
    <string name="participant">참여자</string>
    <string name="notification_channel_promise_ready">게임 시작 준비 알림 채널</string>
    <string name="notification_channel_promise_ready_description">게임 시작 5분 전에 알람을 받습니다.</string>
    <string name="set_profile">프로필 생성</string>
    <string name="profile_title">프로필 설정</string>
    <string name="nickname_hint">닉네임 입력</string>
    <string name="back_main">메인 화면으로 돌아가기</string>
    <string name="join_failure">약속에 참여할 수 없습니다.</string>
    <string name="notification_ready_title">게임 시작 5분 전 안내</string>
    <string name="notification_ready_content">알림을 클릭하여 준비 하세요!</string>
    <string name="open_calendar">캘린더 열기</string>
    <string name="location_selection_from_map">지도에서 선택</string>
    <string name="promise_time_selection">약속 시간 선택</string>
    <string name="game_time_selection">게임 시간 선택</string>
    <string name="next_with_icon">다음 👉</string>
    <string name="search">검색</string>
    <string name="crown_icon">👑</string>
    <string name="hostofpromise">hostOFPromise</string>
    <string name="copy_complete">복사되었습니다.</string>
    <string name="promise_fetch_fail">약속 가져오기에 실패하였습니다.</string>
    <string name="player_image">플레이어 이미지</string>
    <string name="total_score_title">종합 점수:</string>
    <string name="notification_channel_promise_start">게임 시작 알림 채널</string>
    <string name="notification_channel_promise_start_description">게임 시작시 게임 진행 알림을 받는 채널입니다.</string>
    <string name="notification_channel_service">백그라운드 작업 알림 채널</string>
    <string name="notification_channel_service_description">백그라운드 작업 진행에 관한 알림을 받는 채널입니다.</string>
    <string name="notification_start_title">게임이 진행중 입니다.</string>
    <string name="notification_start_content">자기장을 피해 약속 장소로 이동하세요.</string>
    <string name="notification_ready_progress_title">게임 준비 중</string>
    <string name="notification_ready_complete_title">게임 준비 완료</string>
    <string name="notification_ready_complete_content">게임 준비가 완료되었습니다. 약속 정보를 확인하려면 터치하세요.</string>
    <string name="notification_alarm_restart">알람 재 등록중</string>
    <string name="notification_finish_promise_title">게임 종료 중</string>
    <string name="notification_finished_title">게임 종료!</string>
    <string name="notification_finished_content">게임이 종료되었습니다. 게임 결과를 확인하려면 터치하세요.</string>
    <string name="unknown_error">알 수 없는 에러입니다. : %s</string>
    <string name="past_promise_history">과거 약속 정보</string>
    <string name="future_promise_history">미래 약속 정보</string>
    <string name="rank_label">순위</string>
    <string name="rank1">1위</string>
    <string name="rank2">2위</string>
    <string name="rank3">3위</string>
    <string name="hp">HP</string>
    <string name="empty_promises">약속 정보가 존재하지 않습니다.</string>
    <string name="history_item_title">%s님 외 %d명</string>
    <string name="history_item_state_before">%s 후 시작</string>
    <string name="history_item_state_ongoing">%s 전</string>
    <string name="magnetic_radius_setting_title">자기장 반지름을 업데이트 하고 있습니다.</string>
    <string name="magnetic_radius_setting_content">게임 시작을 준비 해 주세요!</string>
    <string name="calculate">정산하기 💸</string>
    <string name="exit">닫기</string>
    <string name="input_amount_due">정산 금액 입력</string>
    <string name="won">원</string>
    <string name="other_payment_title">친구들은 얼마만큼 냈을까요?</string>
    <string name="my_payment_title">💸 내가 낼 금액은? 💸</string>
    <string name="payment">%,2d</string>
    <string name="modification_amount_due">정산 금액 수정 ✏️</string>
    <string name="years_with_suffix">%d년</string>
    <string name="months_with_suffix">%d월</string>
    <string name="days_with_suffix">%d일</string>
    <string name="hours_with_suffix">%d시간</string>
    <string name="minutes_with_suffix">%d분</string>
    <string name="seconds_with_suffix">%d초</string>
    <string name="date_time_template">%d년 %d월 %d일 %d시 %d분</string>
    <string name="no_code_error">게임 코드가 없습니다.</string>
    <string name="ranking_format">%1$s 위</string>
    <string name="loading_text">...</string>
    <string name="won_symbol">₩</string>
    <string name="amount_due_helper_text">최대 500만원까지 입력 가능</string>
    <string name="balance">잔액</string>
    <string name="shake_device_description">흔들어서 도착을 알려주세요!</string>
    <string name="shake_arrive_button">터치하여 도착 🏁</string>
    <string name="promise_people_count">약속 인원</string>
    <string name="btn_ready_not">게임 준비 🐕</string>
    <string name="btn_ready_done">준비 완료 🏁</string>
    <string name="btn_ready_before">게임 시작 5분 전 부터 준비 가능합니다</string>
    <string name="btn_ready_after">게임이 시작되었습니다 👟</string>
    <string name="location_permission_error">위치 권한이 없습니다.</string>
    <string name="location_off_error">위치 기능이 꺼져있습니다. 확인 후 다시 시도해주세요.</string>
    <string name="btn_ready_doing">게임 준비 진행중입니다.</string>
    <string name="status_ready">준비 완료</string>
    <string name="input_hint">검색어를 입력하세요.</string>
    <string name="fetch_data_fail_message">데이터를 불러오는데 실패했습니다.</string>
    <string name="store_data_fail_message">데이터 저장에 실패했습니다.</string>
    <string name="invalid_game_date_time_message">게임 시작 시간은 현재보다 최소 10분 이상이어야 합니다.</string>
    <string name="invalid_for_creating_promise_data_empty">약속을 위한 정보가 비어있습니다.</string>
    <string name="promise_location_text">어디서 볼까요?</string>
    <string name="promise_location_hint">약속 장소 입력...</string>
    <string name="promise_date_text">언제 볼까요?</string>
    <string name="promise_date_hint">약속 날짜 입력...</string>
    <string name="promise_time_text">몇 시에 볼까요?</string>
    <string name="promise_time_hint">약속 시간 입력...</string>
    <string name="game_time_text">언제 출발하나요?</string>
    <string name="game_time_hint">게임 시간 설정...</string>
    <string name="my_ranking">내 순위 : %s위</string>
    <string name="null_value">-</string>
    <string name="location_title">위치</string>
    <string name="promise_setting">약속 설정</string>
    <string name="game_setting">게임 설정</string>
    <string name="check_promise_data_message">다음처럼 약속을 설정하시겠습니까?</string>
    <string name="promise_date_time">약속 시간</string>
    <string name="game_time">게임 시간</string>
    <string-array name="game_time_array">
    <item>게임 시간 설정...</item>
    <item>10분 전</item>
    <item>30분 전</item>
    <item>1시간 전</item>
    <item>2시간 전</item>
    <item>3시간 전</item>
    <item>4시간 전</item>
    <item>5시간 전</item>
    <item>6시간 전</item>
    </string-array>
    <string name="snack_bar_not_implementation">"아직 구현되지 않은 기능입니다."</string>
    <string name="not_found_search_result_message">검색 결과가 없습니다.</string>
</resources>