<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:cardCornerRadius="30dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_input_amount_due_title"
                style="@style/Text24.Black.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="30dp"
                android:paddingHorizontal="20dp"
                android:text="@string/input_amount_due"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottie_beer"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:scaleType="centerCrop"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="@id/tv_input_amount_due_title"
                app:layout_constraintStart_toStartOf="@id/tv_input_amount_due_title"
                app:layout_constraintTop_toBottomOf="@id/tv_input_amount_due_title"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/beer" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/container_et_amount_due"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:counterMaxLength="9"
                app:helperText="@string/amount_due_helper_text"
                app:layout_constraintEnd_toEndOf="@id/tv_input_amount_due_title"
                app:layout_constraintStart_toStartOf="@id/tv_input_amount_due_title"
                app:layout_constraintTop_toBottomOf="@id/lottie_beer"
                app:prefixText="@string/won_symbol"
                app:suffixText="@string/won">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_amount_due"
                    style="@style/Text10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="9"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_cancel"
                style="@style/Text14.Black.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:text="@string/cancel"
                android:textColor="?attr/colorOnPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_submit"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="@id/tv_input_amount_due_title"
                app:layout_constraintTop_toBottomOf="@id/container_et_amount_due" />

            <Button
                android:id="@+id/btn_submit"
                style="@style/Text14.Black.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:text="@string/ok"
                android:textColor="?attr/colorOnPrimary"
                android:enabled="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/tv_input_amount_due_title"
                app:layout_constraintStart_toEndOf="@id/btn_cancel"
                app:layout_constraintTop_toBottomOf="@id/container_et_amount_due" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>